[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.23", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = { version = "0.13", features = ["process"] }
warp = "0.3"
lazy_static = "1.5"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
